<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="OnePlayer">One Player Mode</string>
    <string name="TwoPlayer">Two Player Mode</string>
    <string name="GameTitle">Meta Tic Tac Toe</string>
    <string name="Nothing"></string>
    <string name="testButton">Test Mode</string>
    <string name="confirmMove">Confirm</string>
    <string name="winSquare1">Player 1 won a square!</string>
    <string name="winSquare2">Player 2 won a square!</string>
    <string name="winGame1">Player 1 won the game!</string>
    <string name="winGame2">Player 2 won the game!</string>
    <string name="move">Move</string>
    <string name="check">Checking for Win</string>
    <string name="turn1">Player 1\'s turn</string>
    <string name="turn2">Player 2\'s turn</string>
    <string name="turnSolo">Your turn</string>
    <string name="turnCPU">The CPU is thinking...</string>
    <string name="winner1">Player 1 has won the game!</string>
	<string name="winner2">Player 2 has won the game!</string>
	<string name="winnerSolo">You won the game!</string>
	<string name="winnerCPU">The CPU won the game!</string>
	<string name="Quit">Quit</string>	
	<string name="resetBoard">Restart Game</string>	
	<string name="restartAndQuit">You will lose all current progress. Are you sure?</string>
	<string name="cancel">Cancel</string>
	<string name="restart">Restart</string>
	<string name="pickDifficulty">Select CPU difficulty</string>
	<string name="easy">Easy mode</string>
	<string name="medium">Medium mode</string>
	<string name="hard">Hard mode</string>
	<string name="undoMove">Undo Move</string>
	
	<string-array name="difficulties">
	    <item>Easy</item>
	    <item>Medium</item>
	    <item>Hard</item>
	</string-array>

</resources>
